--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.4"
   }
